# scalpel

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  settings.sample.yaml
.github/workflows/: ci.yml  docker.yml
docker/: README.md  docker-compose.yml
src/: backend.rs  config.rs  main.rs  metrics.rs  tokens.rs  utils.rs
src/cache/: fs.rs  mod.rs  rocks.rs
src/http/: chunked.rs  handler.rs  mod.rs
