[package]
name = "scalpel"
repository = "https://github.com/blockba5her/scalpel"
homepage = "https://github.com/blockba5her/scalpel"
edition = "2018"
version = "0.1.0"
authors = ["Jacob Parker <blocckba5her@gmail.com>"]
description = "Yet another unofficial MD@Home client implementation"
readme = "README.md"
license = "MIT"

[dependencies]
mime_guess = "2.0.3"
serde = "1.0.125"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
sodiumoxide = "0.2.6"
env_logger = "0.8.3"
log = "0.4.14"
chrono = "0.4.19"
async-trait = "0.1.48"
md5 = "0.7.0"
bincode = "1.3.2"
futures = "0.3.13"
bytes = "1.0.1"
openssl = "0.10.33"
actix-web = {version = "4.0.0-beta.5", features = ["openssl"]}
ctrlc = {version = "3.1.8", features = ["termination"]}
reqwest = {version = "0.11.2", features = ["json", "stream"]}

[dependencies.tokio]
version = "1.4.0"
features = ["rt", "rt-multi-thread", "macros", "fs", "io-util", "time"]

[dependencies.rocksdb]
version = "0.15.0"
default-features = false
features = ["zstd"]

[profile.release]
opt-level = 3
lto = true
