[package]
name = "scalpel"
repository = "https://github.com/DevBlocky/scalpel"
homepage = "https://github.com/DevBlocky/scalpel"
edition = "2018"
version = "0.5.1"
authors = ["Jacob Parker <blocckba5her@gmail.com>"]
description = "Yet another unofficial MD@Home client implementation"
readme = "README.md"
license = "MIT"

[features]
default = ["ce-rocksdb", "ce-filesystem"]
ce-rocksdb = ["rocksdb"]
ce-filesystem = ["forceps"]

[dependencies]
ctrlc = {version = "3.2.0", features = ["termination"]}
reqwest = {version = "0.11.2", features = ["json", "stream"]}
bytes = {version = "1.0.1", features = ["serde"]}
serde = {version = "1.0.129", features = ["derive"]}
prometheus = {version = "0.12.0", features = ["process"]}
openssl = {version = "0.10.36", features = ["v110"]}
serde_json = "1.0.66"
serde_yaml = "0.8.20"
sodiumoxide = "0.2.7"
env_logger = "0.9.0"
log = "0.4.14"
chrono = "0.4.19"
async-trait = "0.1.51"
sha2 = "0.9.5"
bincode = "1.3.2"
futures = "0.3.16"
hex = "0.4.3"
lazy_static = "1.4.0"
mime = "0.3.16"
arc-swap = "1.3.2"
url = "2.2.2"

[dependencies.tokio]
version = "1.10.1"
features = ["rt", "rt-multi-thread", "macros", "fs", "io-util", "time"]

[dependencies.actix-web]
version = "4.0.0-beta.8"
default-features = false
features = ["openssl"]

[dependencies.rocksdb]
version = "0.17.0"
default-features = false
optional = true

[dependencies.forceps]
version = "0.3.2"
optional = true

[profile.release]
opt-level = 3
lto = true
